# entservices-systemservices

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  PRODUCT.md  build_dependencies.sh  cov_build.sh  services.cmake
.github/: copilot-instructions.md
.github/instructions/: Plugin.instructions.md  Pluginimplementation.instructions.md
.github/workflows/: L1-tests.yml  L2-tests.yml  native_full_build.yml
Tests/: README.md
Tests/L1Tests/: CMakeLists.txt
Tests/L1Tests/tests/: test_SystemServices.cpp
Tests/L2Tests/: CMakeLists.txt
Tests/L2Tests/tests/: SystemService_L2Test.cpp
helpers/: PluginInterfaceBuilder.h  UtilsProcess.h  UtilsfileExists.h
helpers/systimerifc/: itimermsg.h
plugin/: CMakeLists.txt  SystemServices.conf.in  SystemServices.config  SystemServices.cpp  SystemServices.h  SystemServicesHelper.cpp  SystemServicesHelper.h  SystemServicesImplementation.cpp  SystemServicesImplementation.h  cTimer.cpp  cTimer.h  thermonitor.cpp  thermonitor.h  uploadlogs.cpp  uploadlogs.h
plugin/TestClient/: systemServiceTestClient.cpp
plugin/cmake/: FindDS.cmake  FindIARMBus.cmake
plugin/platformcaps/: platformcaps.cpp  platformcaps.h  platformcapsdata.cpp  platformcapsdata.h  platformcapsdatarpc.cpp
